objects/Account_Team_History__c.object
<CustomObject>
    <description>Tracks additions or deletions to a given Account&apos;s Account Team members.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Team History</relationshipLabel>
        <relationshipName>Account_Team_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Action__c</fullName>
        <label>Date of Action</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Team_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Team History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Team_Member__c</columns>
        <columns>Team_Role__c</columns>
        <columns>Account__c</columns>
        <columns>Date_of_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Deletes</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Team_Member__c</columns>
        <columns>Team_Role__c</columns>
        <columns>Account__c</columns>
        <columns>Date_of_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Delete</value>
        </filters>
        <label>Deletes</label>
    </listViews>
    <listViews>
        <fullName>Inserts</fullName>
        <columns>NAME</columns>
        <columns>Action__c</columns>
        <columns>Team_Member__c</columns>
        <columns>Team_Role__c</columns>
        <columns>Account__c</columns>
        <columns>Date_of_Action__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Insert</value>
        </filters>
        <label>Inserts</label>
    </listViews>
    <nameField>
        <displayFormat>ATH-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>ATH ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team History</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>